--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rand = "^0.3"
 getopts = "^0.2"
 rust-lzma = "^0.2"
 libc = "^0.2"
-rust-acd = { path = "rust-acd" }
+rust-acd = "^0.1"
 tempdir = "^0.3"
 rusqlite = "^0.6"
 
