--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,28 @@
 [package]
-name = "preserve"
-version = "0.1.0"
 authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
 description = "Encrypted backup system."
-repository = "https://github.com/fpgaminer/preserve"
-readme = "README.md"
 license = "MIT OR Apache-2.0"
+name = "preserve"
+readme = "README.md"
+repository = "https://github.com/fpgaminer/preserve"
+version = "0.1.0"
 
 [dependencies]
-rustc-serialize = "^0.3"
-rust-crypto = "^0.2"
-rand = "^0.3"
 getopts = "^0.2"
-rust-lzma = "^0.2"
 libc = "^0.2"
-rust-acd = "^0.1"
-tempdir = "^0.3"
+rand = "^0.3"
 rusqlite = "^0.6"
+rust-crypto = "^0.2"
+rust-lzma = "^0.2"
+rustc-serialize = "^0.3"
+tempdir = "^0.3"
+
+[dependencies.rust-acd]
+git = "https://github.com/fpgaminer/rust-acd.git"
+optional = false
+
+[profile]
 
 [profile.dev]
-opt-level = 2
 debug = true
+opt-level = 2
