--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-target
+/target
 /keyfile
 /acd.authorization.json
 /acd.cache.sqlite
 /acd.endpoint.json
 /acd.security_profile.json
 /cache.sqlite
+/.config
