--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,14 @@ version = "0.1.0"
 [dependencies]
 getopts = "^0.2"
 libc = "^0.2"
+log = "0.3.6"
 rand = "^0.3"
 rusqlite = "^0.6"
 rust-crypto = "^0.2"
 rust-lzma = "^0.2"
 rustc-serialize = "^0.3"
 tempdir = "^0.3"
+time = "0.1.35"
 
 [dependencies.rust-acd]
 git = "https://github.com/fpgaminer/rust-acd.git"
