--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rust-lzma = "^0.2"
 rustc-serialize = "^0.3"
 tempdir = "^0.3"
 time = "0.1.35"
+url = "1.1.1"
 
 [dependencies.rust-acd]
 git = "https://github.com/fpgaminer/rust-acd.git"
