Add Ceph backend support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,11 @@ url = "1.1.1"
 git = "https://github.com/fpgaminer/rust-acd.git"
 optional = false
 
+[dependencies.ceph-rust]
+# git = "https://github.com/ceph/ceph-rust"
+path = "../ceph-rust"
+optional = false
+
 [profile]
 
 [profile.dev]
