Remove debugging printlns

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,13 @@ optional = false
 path = "../ceph-rust"
 optional = false
 
-[profile]
-
 [profile.dev]
-debug = true
-opt-level = 2
+opt-level = 0      # controls the `--opt-level` the compiler builds with
+debug = true       # controls whether the compiler passes `-g`
+rpath = false      # controls whether the compiler passes `-C rpath`
+lto = false        # controls `-C lto` for binaries and staticlibs
+debug-assertions = true # controls whether debug assertions are enabled
+codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
+                   # `codegen-units` is ignored when `lto = true`
+panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
+
