--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,14 @@ readme = "README.md"
 repository = "https://github.com/fpgaminer/preserve"
 version = "0.1.0"
 
+[features]
+ceph = ["ceph-rust"]
+gluster = ["gfapi-sys"]
+
 [dependencies]
+ceph-rust = {path = "../ceph-rust", optional = true}
 clap = "2.5.1"
+gfapi-sys = {path = "../Gfapi-sys", optional = true}
 libc = "^0.2"
 log = "0.3.6"
 rand = "^0.3"
@@ -23,11 +29,6 @@ url = "1.1.1"
 git = "https://github.com/fpgaminer/rust-acd.git"
 optional = false
 
-[dependencies.ceph-rust]
-# git = "https://github.com/cholcombe973/ceph-rust"
-path = "../ceph-rust"
-optional = false
-
 [profile.dev]
 opt-level = 0      # controls the `--opt-level` the compiler builds with
 debug = true       # controls whether the compiler passes `-g`
@@ -37,4 +38,3 @@ debug-assertions = true # controls whether debug assertions are enabled
 codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                    # `codegen-units` is ignored when `lto = true`
 panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
-
