--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ ceph = ["ceph-rust"]
 gluster = ["gfapi-sys"]
 
 [dependencies]
-ceph-rust = {version = "^0.1", optional = true}
+ceph-rust = {git = "https://github.com/cholcombe973/ceph-rust", optional = true}
 clap = "^2.19"
 gfapi-sys = {version = "^0.2", optional = true}
 libc = "^0.2"
