Use cloud archive instead of ceph-deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,10 @@ rust:
   - beta
 before_install:
   - sudo add-apt-repository ppa:gluster/glusterfs-3.8 -y
+  - sudo add-apt-repository cloud-archive:mitaka -y
   - sudo apt-get update -q
   - sudo apt-get install glusterfs-common
-  - ssh-keygen -f $HOME/.ssh/id_rsa -t rsa -N ''
-  - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
-  - chmod 600 ~/.ssh/authorized_keys
-  - sudo pip install ceph-deploy
-  - ceph-deploy install --release jewel `hostname`
-  - ceph-deploy pkg --install librados-dev `hostname`
+  - sudo apt-get install librados-dev
 addons:
   apt:
     packages:
