--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ ceph-rust = {git = "https://github.com/cholcombe973/ceph-rust", optional = true}
 clap = "^2.19"
 gfapi-sys = {version = "^0.2", optional = true}
 libc = "^0.2"
+json = "^0.11"
 log = "0.3.6"
 rand = "^0.3"
 rust-crypto = "^0.2"
