--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ libc = "^0.2"
 json = "^0.11"
 log = "0.3.6"
 rand = "^0.3"
+rusqlite = "^0.6"
 rust-crypto = "^0.2"
 rust-lzma = "^0.2"
 rustc-serialize = "^0.3"
