--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ addons:
     packages:
       - liblzma-dev
 script:
-  - cargo build --features$FEATURES --verbose
-  - cargo test --features=$FEATURES --verbose
+  - cargo build --features="$FEATURES" --verbose
+  - cargo test --features="$FEATURES" --verbose
