Add simple install files for gluster ceph and vault.  Also enable the integration test again

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
   apt:
     packages:
       - liblzma-dev
+      - unzip
 script:
   - cargo build --features "ceph gluster vault" --verbose
   - cargo test --features "ceph gluster vault" --verbose
