Add snappy plugin until PR lands in snapcraft

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,7 +12,7 @@ confinement: strict # use 'strict' once you have the right plugs and slots
 parts:
   preserve:
     # See 'snapcraft plugins'
-    plugin: rust
+    plugin: x-rust
     rust-features:
       - ceph
       - gluster
