--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -20,6 +20,7 @@ parts:
     stage-packages:
       - pkg-config
       - libssl-dev
+      - libacl1
       - libsqlite3-dev
       - liblzma-dev
       - librados-dev
