Switch to classic confinement mode

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,7 +7,7 @@ description: |
   exposing any of your data. Backups are simple, operating very similar to
   creating an archive like Zip or Tar. Deduplication makes this space efficient.
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: strict # use 'strict' once you have the right plugs and slots
+confinement: classic # use 'strict' once you have the right plugs and slots
 
 parts:
   preserve:
