--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ repository = "https://github.com/fpgaminer/preserve"
 version = "0.1.0"
 
 [dependencies]
-clap = "2.5.1"
-libc = "^0.2"
-log = "0.3.6"
+clap = "2"
+libc = "0.2"
+log = { version = "0.4", features = ["std"] }
 rand = "^0.3"
 rusqlite = "0.16.0"
 rust-crypto = "^0.2"
