--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,13 @@ rand = "^0.3"
 rusqlite = "0.16.0"
 rust-crypto = "^0.2"
 rust-lzma = "0.4"
-rustc-serialize = "^0.3"
 tempfile = "3"
-time = "0.1.35"
-url = "1.7"
+time = "0.1"
+url = "1"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+data-encoding = "2"
 
 [profile]
 
