--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.1.0"
 clap = "2"
 libc = "0.2"
 log = { version = "0.4", features = ["std"] }
-rand = "^0.3"
+rand = "0.6"
 rusqlite = "0.16.0"
 rust-crypto = "^0.2"
 rust-lzma = "0.4"
