Upgraded to edition 2018.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ name = "preserve"
 readme = "README.md"
 repository = "https://github.com/fpgaminer/preserve"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
 clap = "2"
