--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,20 @@ version = "0.2.0"
 edition = "2018"
 
 [dependencies]
-clap = "2"
-libc = "0.2"
-log = { version = "0.4", features = ["std"] }
-rand = "0.6"
-rusqlite = "0.16.0"
-rust-crypto = "^0.2"
-rust-lzma = "0.4"
-tempfile = "3"
-time = "0.1"
-url = "1"
-serde = "1"
-serde_derive = "1"
-serde_json = "1"
-data-encoding = "2"
+clap = "2.33.0"
+libc = "0.2.62"
+log = { version = "0.4.8", features = ["std"] }
+rand = "0.7.0"
+rusqlite = "0.20.0"
+rust-crypto = "0.2.36"
+rust-lzma = "0.4.0"
+tempfile = "3.1.0"
+time = "0.1.42"
+url = "2.1.0"
+serde = "1.0.99"
+serde_derive = "1.0.99"
+serde_json = "1.0.40"
+data-encoding = "2.1.2"
 
 [profile]
 
